# AutoDebug

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  watched_repos.json
.github/workflows/: autofix.yml  repo_watcher.yml  trigger.yml
agents/: __init__.py  analyser.py  detector.py  fixer.py  resolver.py  tester.py
autodebug/: cli.py
band/: client.py
band_agents/: analyser.py  band_config_loader.py  detector.py  fixer.py  resolver.py  run_all.py  tester.py
core/: context.py  pipeline.py  repo_watcher.py
docs/: troubleshooting.md
integrations/: devops_notifier.py
notifier/: emailer.py  formatter.py
